--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ ul#menu li {
     padding-right: 1rem;
 }
 
+.portrait {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .copyright {
     font-size: 0.9rem;
 }
