--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
     src: url('OpenSans-Regular.ttf');
 }
 
-.body {
-    width: 70%;
+body {
+    margin: 0 auto;
+    width: 60%;
     font-family: Open Sans;
 }
 
