--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Open Sans;
-    src: url('OpenSans-Regular.ttf');
+    src: url('../fonts/OpenSans-Regular.ttf');
 }
 
 body {
